--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">KotlinAccount</string>
+    <string name="button_save">save</string>
+    <string name="amount">金额</string>
+    <string name="type">类型</string>
 </resources>
