--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
     <string name="button_save">save</string>
     <string name="amount">金额</string>
     <string name="type">类型</string>
-    <string name="please_input">请选择</string>
+    <string name="please_input">请输入</string>
+    <string name="new_type">新增类型</string>
 </resources>
