--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="amount">金额</string>
     <string name="type">类型</string>
     <string name="please_input">请输入</string>
+    <string name="please_select">请选择</string>
     <string name="new_type">新增类型</string>
+    <string name="delete">删除</string>
 </resources>
