--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="delete">删除</string>
     <string name="edit">编辑</string>
     <string name="edit_type">编辑类型</string>
+    <string name="edit_record">编辑记录</string>
+    <string name="cancel">取消</string>
+    <string name="confirm">确认</string>
 </resources>
