--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="edit_record">编辑记录</string>
     <string name="cancel">取消</string>
     <string name="confirm">确认</string>
+    <string name="confirm_delete">确认删除这条记录么？</string>
 </resources>
