完成周k，月k的绘制

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">爱统计</string>
+    <string name="app_name">统计助手</string>
     <string name="button_save">save</string>
     <string name="amount">金额</string>
     <string name="type">类型</string>
