--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,12 +19,32 @@
 
     <string name="user_hint">亲爱的用户，感谢您下载统计助手。\n
         我们非常重视您的个人信息和隐私保护，为了更好地保护您的个人权益，我们根据相关的法律制定了
-        《统计助手服务协议》和《隐私政策》。请充分阅读并了解在使用本软件过程中我们可能会收集、使用您的个人信息，并希望您着重关注：
+        《统计助手服务协议》和《隐私政策》。现向您说明如下：\n\n
+        1.我们可能会获取您的设备号信息、设备信息，网络信息等内容用于做用户分析，以指导下一步的应用优化；\n\n
+        2.我们会采取各种安全措施保护您的信息安全，未经您同意，我们不会从第三方获取，共享或对外提供您的信息。\n
     </string>
     <string name="service_protocol">《统计助手服务协议》</string>
     <string name="privacy_policy">《隐私政策》</string>
     <string name="service_protocal_title">用户服务协议</string>
-    <string name="service_protocal_content">服务协议内容</string>
+    <string name="service_protocal_content">感谢您下载和使用统计助手,请您在使用本软件之前详细阅读服务协议和隐私政策。\n
+        一、缔约主体 \n
+        本协议由本软件用户与软件开发者共同缔结。
+        二、接受条款 \n
+        以任何方式进入本统计助手并点击同意按钮即表示您同意与统计助手签订本协议、且您将接受本协议的条款和条件约束。\n
+        三、服务内容\n
+        本软件方便用户对自己所要统计的项目进行各种统计。目前主要是个人资产统计。统计助手会不断丰富本软件的功能。\n
+        四、收费\n
+        本软件保留后续收费的权利。\n
+        五、隐私政策\n
+        详细条款请参见《隐私政策》。\n
+        六、责任范围\n
+        您明确理解和同意，统计助手仅对本协议中所列明的义务承担责任。\n
+        用户应对自己的重要数据做备份，通过统计助手保存的数据如果出现错误或损坏，本软件不承担赔偿责任。\n
+        七、遵守法律\n
+        您承诺不会利用本软件提供服务进行任何违法或不当的活动共。\n
+        八、协议更新\n
+        本协议可能发生变动，开发者保留变更协议的权利，权利变更会用显著的方式通知用户。
+    </string>
     <string name="privacy_policy_title">隐私政策</string>
     <string name="privacy_policy_content">隐私政策内容</string>
 </resources>
