--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,4 +72,5 @@
     <string name="change_trend">变化趋势</string>
     <string name="new_property">新增资产</string>
     <string name="empty_hint">空空如也，赶紧点击加号来添加资产吧!</string>
+    <string name="type_name_not_null">类型名称不能为空</string>
 </resources>
