--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,7 +52,7 @@
         您的信任对我们非常重要，我们深知个人信息对您的重要性，我们将按照法律法规的要求，基于您的授权，合理、必要、限制地使用您的个人信息。\n
         您应认真阅读，充分理解并授权后再使用本软件。\n\n
         二、我们将如何收集和使用您的个人信息\n
-        我们收集的个人信息主要有以下几种：\n
+        我们收集您的信息主要用于改善我们的服务，我们收集的个人信息主要有以下几种：\n
         1.我们通过软件运行日志，记录程序的运行状态及崩溃。如果发生运行错误及异常，上报错误日志，用于分析错误和优化软件。\n
         2.我们收集设备授权码，授权类型，网络运营商及使用习惯等，用于指导后续软件的运营方向，用于改进我们的服务。\n\n
         三、我们如何共享、转让、公开披露您的信息\n
@@ -61,7 +61,12 @@
         信息存储：\n
         我们会依照法律的规定，仅会将收集到的有关您的个人信息保存在中华人民共和国境内。\n\n
         五、使用到的第三方sdk:\n
-        1.bugly sdk.用于检测应用运行异常情况，用于优化，减少应用崩溃，提高系统兼容性。\n\n
+        1.sdk名称:bugly sdk.\n
+          用途:用于检测应用运行异常情况，用于优化，减少应用崩溃，提高系统兼容性。\n
+        2.sdk名称：友盟+SDK\n
+          用途：用于统计使用的用户量，应用程序用户增长信息。\n
+          收集个人信息类型：设备信息（IMEI/Mac/android ID/IDFA/OPENUDID/GUID/SIM卡IMSI/地理位置信息)\n
+          友盟隐私权政策链接：https://www.umeng.com/page/policy\n\n
         六、联系我们\n
         您可以通过发送邮件到邮箱 459843397@qq.com 来反馈您的意见和建议。\n\n
         七、协议更新\n
