完善隐私政策和用户服务协议

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,46 +29,47 @@
     <string name="service_protocal_title">用户服务协议</string>
     <string name="service_protocal_content">感谢您下载和使用统计助手,请您在使用本软件之前详细阅读服务协议和隐私政策。\n
         一、定义：\n
-        统计助手：指统计助手向用户提供服务的产品载体（包括并不限于APP/网站/公众号等）\n
-        统计助手服务提供者：个人开发者刘伟\n\n
-        二、接受条款 \n
+        统计助手：指统计助手向用户提供服务的产品载体（包括并不限于APP/网站/公众号等）。\n
+        统计助手服务提供者：个人开发者刘伟。\n\n
+        二、接受条款： \n
         以任何方式进入本统计助手并点击同意按钮即表示您同意与统计助手签订本协议、且您将接受本协议的条款和条件约束。\n\n
-        三、服务内容\n
+        三、服务内容：\n
         本软件方便用户对自己所要统计的项目进行各种统计。目前主要是个人资产统计。统计助手会不断丰富本软件的功能。\n\n
-        四、收费\n
+        四、收费：\n
         本软件保留后续收费的权利。\n\n
-        五、隐私政策\n
+        五、隐私政策：\n
         详细条款请参见《隐私政策》。\n\n
-        六、责任范围\n
+        六、责任范围：\n
         您明确理解和同意，统计助手仅对本协议中所列明的义务承担责任。\n
         用户应对自己的重要数据做备份，通过统计助手保存的数据如果出现错误或损坏，本软件不承担赔偿责任。\n\n
-        七、遵守法律\n
-        您承诺不会利用本软件提供服务进行任何违法或不当的活动共。\n
-        八、协议更新\n
+        七、遵守法律：\n
+        您承诺不会利用本软件提供服务进行任何违法或不当的活动共。\n\n
+        八、协议更新：\n
         本协议可能发生变动，开发者保留变更协议的权利，权利变更会用通知或弹窗等显著的方式通知用户。\n\n
-        九、联系我们\n
+        九、联系我们：\n
         您可以通过发送邮件到邮箱 459843397@qq.com 来反馈您的意见和建议。\n\n
     </string>
     <string name="privacy_policy_title">隐私政策</string>
     <string name="privacy_policy_content">
-        一、引言\n
+        一、引言:\n
         您的信任对我们非常重要，我们深知个人信息对您的重要性，我们将按照法律法规的要求，基于您的授权，合理、必要、限制地使用您的个人信息。\n
         您应认真阅读，充分理解并授权后再使用本软件。\n\n
         二、定义：\n
-        统计助手：指统计助手向用户提供服务的产品载体（包括并不限于APP/网站/公众号等）\n
-        统计助手服务提供者：个人开发者刘伟\n\n
-        三、我们将如何收集和使用您的个人信息\n
+        统计助手：指统计助手向用户提供服务的产品载体（包括并不限于APP/网站/公众号等）。\n
+        统计助手服务提供者：个人开发者刘伟。\n\n
+        三、我们将如何收集和使用您的个人信息：\n
         我们收集您的信息主要用于改善我们的服务，我们收集的个人信息主要有以下几种：\n
         1.我们通过软件运行日志，记录程序的运行状态及崩溃。如果发生运行错误及异常，上报错误日志，用于分析错误和优化软件。\n
         2.我们收集设备授权码，授权类型，网络运营商及使用习惯等，用于指导后续软件的运营方向，用于改进我们的服务。\n\n
-        四、我们如何共享、转让、公开披露您的信息\n
+        四、我们如何共享、转让、公开披露您的信息：\n
         未经您允许，您的个人信息会被严格保密，我们会在本协议条款下及法律法规限定内使用您的信息。\n\n
-        五、我们对您个人信息的存储\n
+        五、我们对您个人信息的存储：\n
         信息存储：\n
         我们会依照法律的规定，仅会将收集到的有关您的个人信息保存在中华人民共和国境内。\n\n
         六、使用到的第三方sdk:\n
         1.sdk名称:bugly sdk.\n
           用途:用于检测应用运行异常情况，用于优化，减少应用崩溃，提高系统兼容性。\n
+          收集个人信息类型：软件运行崩溃及异常日志。\n
         2.sdk名称：友盟+SDK\n
           用途：用于统计使用的用户量，应用程序用户增长信息。\n
           收集个人信息类型：设备信息（IMEI/Mac/android ID/IDFA/OPENUDID/GUID/SIM卡IMSI/地理位置信息)\n
