隐私政策整改

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,7 +60,11 @@
         三、我们将如何收集和使用您的个人信息：\n
         我们收集您的信息主要用于改善我们的服务，我们收集的个人信息主要有以下几种：\n
         1.我们通过软件运行日志，记录程序的运行状态及崩溃。如果发生运行错误及异常，上报错误日志，用于分析错误和优化软件。\n
-        2.我们收集设备授权码，授权类型，网络运营商及使用习惯等，用于指导后续软件的运营方向，用于改进我们的服务。\n\n
+        2.我们使用的sdk会收集设备授权码，授权类型，网络运营商，imei，mac地址及使用习惯等，用于绘制用户画像，指导后续软件的运营方向，用于改进我们的服务。\n\n
+        请注意，单独的设备信息、服务日志信息是无法识别特定自然人身份的信息。
+        如果我们将这类非个人信息与其他信息结合用于识别特定自然人身份，或者将其与个人信息结合使用，则在结合使用期间，这类非个人信息将被视为个人信息，除取得您授权或法律法规另有规定外，
+        我们会将这类信息做匿名化、去标识化处理。\n\n
+
         四、我们如何共享、转让、公开披露您的信息：\n
         未经您允许，您的个人信息会被严格保密，我们会在本协议条款下及法律法规限定内使用您的信息。\n\n
         五、我们对您个人信息的存储：\n
@@ -73,6 +77,8 @@
         2.sdk名称：友盟+SDK\n
           用途：用于统计使用的用户量，应用程序用户增长信息。\n
           收集个人信息类型：设备信息（IMEI/Mac/android ID/IDFA/OPENUDID/GUID/SIM卡IMSI/地理位置信息)\n
+          IMEI/Mac/android ID/IDFA/OPENUDID/GUID/SIM卡IMSI用于唯一标识用户信息，统计用户数量。地理位置信息用于统计用户分布情况。
+          详细使用情况及收集权限，请见下面的链接。
           友盟隐私权政策链接：https://www.umeng.com/page/policy\n\n
         七、协议更新\n
         本协议可能发生变动，开发者保留变更协议的权利，权利变更会用通知或弹窗等显著的方式通知用户。\n\n
