--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,7 +60,8 @@
         三、我们将如何收集和使用您的个人信息：\n
         我们收集您的信息主要用于改善我们的服务，我们收集的个人信息主要有以下几种：\n
         1.我们通过软件运行日志，记录程序的运行状态及崩溃。如果发生运行错误及异常，上报错误日志，用于分析错误和优化软件。\n
-        2.我们使用的sdk会收集设备授权码，授权类型，网络运营商，imei，mac地址及使用习惯等，用于绘制用户画像，指导后续软件的运营方向，用于改进我们的服务。\n\n
+        2.我们使用的sdk会收集设备授权码，授权类型，网络运营商，imei，mac地址及使用习惯等，用于绘制用户画像，指导后续软件的运营方向，用于改进我们的服务。
+        其中imei和mac地址是用来唯一标识用户设备。\n\n
         请注意，单独的设备信息、服务日志信息是无法识别特定自然人身份的信息。
         如果我们将这类非个人信息与其他信息结合用于识别特定自然人身份，或者将其与个人信息结合使用，则在结合使用期间，这类非个人信息将被视为个人信息，除取得您授权或法律法规另有规定外，
         我们会将这类信息做匿名化、去标识化处理。\n\n
