--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,15 +74,14 @@
         六、使用到的第三方sdk:\n
         1.sdk名称:bugly sdk.\n
           用途:用于检测应用运行异常情况，用于优化，减少应用崩溃，提高系统兼容性。\n
-          收集个人信息类型：软件运行崩溃及异常日志,手机型号,手机品牌，设备信息（IMEI/Mac/android ID/IDFA/OPENUDID/GUID/SIM卡IMSI/地理位置信息)。\n
-          收集的信息用于提高APP运行稳定性。\n
+          收集个人信息类型：软件运行崩溃及异常日志,手机型号,手机品牌，设备信息（设备序列号/Mac/android ID/IDFA/OPENUDID/GUID/SIM卡IMSI/地理位置信息)。\n
+          收集的设备序列号信息用于对用户进行唯一标识，以便进行埋点统计，用户留存统计，用户行为统计等，便于后期改进我们的服务。\n
 
         2.sdk名称：友盟+SDK\n
           用途：用于统计使用的用户量，应用程序用户增长信息。\n
-          收集个人信息类型：设备信息（IMEI/Mac/android ID/IDFA/OPENUDID/GUID/SIM卡IMSI/地理位置信息)\n
-          IMEI/Mac/android ID/IDFA/OPENUDID/GUID/SIM卡IMSI用于唯一标识用户信息，统计用户数量。地理位置信息用于统计用户分布情况。
-          详细使用情况及收集权限，请见下面的链接。
-          友盟隐私权政策链接：https://www.umeng.com/page/policy\n\n
+          收集个人信息类型：设备信息（设备序列号/Mac/android ID/IDFA/OPENUDID/GUID/SIM卡/IMSI/地理位置信息)\n
+          收集的设备序列号信息用途:基于设备提供sdk服务。例如用于对用户进行唯一标识，以便进行埋点统计，用户留存统计等，便于后期改进我们的服务。\n
+          数据保护方式：a.采用SSL协议加密及HTTPS传输加密技术保障安全;b.采取加密、去标识化等安全措施脱敏处理。
         七、协议更新\n
         本协议可能发生变动，开发者保留变更协议的权利，权利变更会用通知或弹窗等显著的方式通知用户。\n\n
         八、联系我们\n
