fix issue about tencent app store about privacy.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,7 +81,9 @@
           用途：用于统计使用的用户量，应用程序用户增长信息。\n
           收集个人信息类型：设备信息（设备序列号/Mac/android ID/IDFA/OPENUDID/GUID/SIM卡/IMSI/地理位置信息)\n
           收集的设备序列号信息用途:基于设备提供sdk服务。例如用于对用户进行唯一标识，以便进行埋点统计，用户留存统计等，便于后期改进我们的服务。\n
-          数据保护方式：a.采用SSL协议加密及HTTPS传输加密技术保障安全;b.采取加密、去标识化等安全措施脱敏处理。
+          数据保护方式：\n
+          a.采用SSL协议加密及HTTPS传输加密技术保障安全;\n
+          b.采取加密、去标识化等安全措施脱敏处理。\n\n
         七、协议更新\n
         本协议可能发生变动，开发者保留变更协议的权利，权利变更会用通知或弹窗等显著的方式通知用户。\n\n
         八、联系我们\n
