--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">统计助手</string>
+    <string name="add_item">新增资产</string>
     <string name="button_save">保存</string>
     <string name="amount">金额</string>
     <string name="type">类型</string>
