Fix privacy compliance agreement.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,13 +70,14 @@
         请注意，单独的设备信息、服务日志信息是无法识别特定自然人身份的信息。
         如果我们将这类非个人信息与其他信息结合用于识别特定自然人身份，或者将其与个人信息结合使用，则在结合使用期间，这类非个人信息将被视为个人信息，除取得您授权或法律法规另有规定外，
         我们会将这类信息做匿名化、去标识化处理。\n\n
-
-        四、我们如何共享、转让、公开披露您的信息：\n
+        四、应用启动和关联启动说明：
+        本应用主要功能是统计，所以会在每间隔一段时间（如24h)会使用Android官方的定时任务功能去做一次数据整理和归档操作，用于数据统计的需要。
+        五、我们如何共享、转让、公开披露您的信息：\n
         未经您允许，您的个人信息会被严格保密，我们会在本协议条款下及法律法规限定内使用您的信息。\n\n
-        五、我们对您个人信息的存储：\n
+        六、我们对您个人信息的存储：\n
         信息存储：\n
         我们会依照法律的规定，仅会将收集到的有关您的个人信息保存在中华人民共和国境内。\n\n
-        六、使用到的第三方sdk:\n
+        七、使用到的第三方sdk:\n
         1.sdk名称:bugly sdk.\n
           用途:用于检测应用运行异常情况，用于优化，减少应用崩溃，提高系统兼容性。\n
           收集个人信息类型：软件运行崩溃及异常日志,手机型号,手机品牌，设备信息（设备序列号/Mac/android ID/IDFA/OPENUDID/GUID/SIM卡IMSI/地理位置信息)。\n
@@ -89,9 +90,9 @@
           数据保护方式：\n
           a.采用SSL协议加密及HTTPS传输加密技术保障安全;\n
           b.采取加密、去标识化等安全措施脱敏处理。\n\n
-        七、协议更新\n
+        八、协议更新\n
         本协议可能发生变动，开发者保留变更协议的权利，权利变更会用通知或弹窗等显著的方式通知用户。\n\n
-        八、联系我们\n
+        九、联系我们\n
         您可以通过发送邮件到邮箱 459843397@qq.com 来反馈您的意见和建议。\n\n
     </string>
     <string name="disagree">不同意</string>
